# Multilayer-Perceptron-Neural-Network

./: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README  main.cpp  maino.cpp  oh_tests_const.cpp  oh_tests_exceptions.cpp  presubmit.cpp  test_matrix.cpp
